[package]
name = "dqache"
version = "0.0.1"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "copy-dylibs", "xnnpack"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["directml", "cuda", "tensorrt"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml"] }